// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assignments init with existing repository & init again after changes 1`] = `
[
  {
    "name": ".current.json",
    "path": "hexlet-assignments/.current.json",
    "size": 39n,
  },
  {
    "name": "hexlet-check.yml",
    "path": "hexlet-assignments/.github/workflows/hexlet-check.yml",
    "size": 600n,
  },
  {
    "name": "README.md",
    "path": "hexlet-assignments/README.md",
    "size": 24n,
  },
  {
    "name": ".gitignore",
    "path": "hexlet-assignments/basics-course/example/.gitignore",
    "size": 20n,
  },
  {
    "name": "Makefile",
    "path": "hexlet-assignments/basics-course/example/Makefile",
    "size": 23n,
  },
  {
    "name": "README.md",
    "path": "hexlet-assignments/basics-course/example/README.md",
    "size": 402n,
  },
  {
    "name": "file1",
    "path": "hexlet-assignments/basics-course/example/file1",
    "size": 12n,
  },
  {
    "name": "Makefile",
    "path": "hexlet-assignments/basics-course/start/Makefile",
    "size": 23n,
  },
  {
    "name": "README.md",
    "path": "hexlet-assignments/basics-course/start/README.md",
    "size": 402n,
  },
]
`;

exports[`assignments init with existing repository & init again after changes 2`] = `
[
  {
    "name": ".current.json",
    "path": "hexlet-assignments/.current.json",
    "size": 39n,
  },
  {
    "name": "hexlet-check.yml",
    "path": "hexlet-assignments/.github/workflows/hexlet-check.yml",
    "size": 600n,
  },
  {
    "name": "README.md",
    "path": "hexlet-assignments/README.md",
    "size": 24n,
  },
  {
    "name": ".gitignore",
    "path": "hexlet-assignments/basics-course/example/.gitignore",
    "size": 20n,
  },
  {
    "name": "Makefile",
    "path": "hexlet-assignments/basics-course/example/Makefile",
    "size": 23n,
  },
  {
    "name": "README.md",
    "path": "hexlet-assignments/basics-course/example/README.md",
    "size": 402n,
  },
  {
    "name": "addedFile",
    "path": "hexlet-assignments/basics-course/example/addedFile",
    "size": 7n,
  },
  {
    "name": "file1",
    "path": "hexlet-assignments/basics-course/example/file1",
    "size": 12n,
  },
  {
    "name": "Makefile",
    "path": "hexlet-assignments/basics-course/start/Makefile",
    "size": 23n,
  },
  {
    "name": "README.md",
    "path": "hexlet-assignments/basics-course/start/README.md",
    "size": 402n,
  },
]
`;

exports[`assignments init with program config 1`] = `
[
  {
    "name": "hexlet-check.yml",
    "path": "hexlet-assignments/.github/workflows/hexlet-check.yml",
    "size": 600n,
  },
  {
    "name": "README.md",
    "path": "hexlet-assignments/README.md",
    "size": 24n,
  },
]
`;

exports[`assignments init without local config 1`] = `
[
  {
    "name": "hexlet-check.yml",
    "path": "hexlet-assignments/.github/workflows/hexlet-check.yml",
    "size": 600n,
  },
  {
    "name": "README.md",
    "path": "hexlet-assignments/README.md",
    "size": 24n,
  },
]
`;
